Adding Codex capabilities and trying desperately to fix the gradingwindow bugs